added [get] /subscriptions handler for getting lis of the subscriptions by filter
